--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,6 +2,9 @@
 # https://firebase.google.com/docs/app-hosting/configure
 
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
+  # Minimum number of instances to keep running.
+  # Set to 0 to allow scaling to zero when there's no traffic.
+  minInstances: 0
+  # Maximum number of instances to automatically spin up
+  # in response to increased traffic.
   maxInstances: 1
